--- a/fine_tuner.ipynb
+++ b/fine_tuner.ipynb
@@ -55,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dir = 'insurance-fraud/train'\n",
-    "test_dir = 'insurance-fraud/test'\n",
+    "train_dir = 'data/train'\n",
+    "test_dir = 'data/test'\n",
     "\n",
     "train_dataset = tf.keras.utils.image_dataset_from_directory(train_dir, image_size=IMG_SIZE, batch_size=BATCH_SIZE, seed=50)\n",
     "test_dataset = tf.keras.utils.image_dataset_from_directory(test_dir, image_size=IMG_SIZE, batch_size=BATCH_SIZE, shuffle=False)\n",
