--- a/fine_tuner.ipynb
+++ b/fine_tuner.ipynb
@@ -162,7 +162,7 @@
     "trials_data = get_all_trials(logs_dir)\n",
     "df = pd.DataFrame(trials_data)\n",
     "\n",
-    "df.to_csv('keras_tuner_results.csv', index=False)"
+    "df.to_csv('kt_logs/keras_tuner_results.csv', index=False)"
    ]
   }
  ],
