--- a/fine_tuner.ipynb
+++ b/fine_tuner.ipynb
@@ -104,7 +104,7 @@
     "    objective=kt.Objective(\"val_f1_score\", direction=\"max\"),\n",
     "    max_trials=10,\n",
     "    executions_per_trial=1,\n",
-    "    directory='kt_logs_1',\n",
+    "    directory='logs',\n",
     "    project_name='fraud_model',\n",
     "    overwrite=True\n",
     ")\n",
@@ -157,12 +157,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logs_dir = 'kt_logs/fraud_model'\n",
+    "logs_dir = 'logs/fraud_model'\n",
     "\n",
     "trials_data = get_all_trials(logs_dir)\n",
     "df = pd.DataFrame(trials_data)\n",
     "\n",
-    "df.to_csv('kt_logs/keras_tuner_results.csv', index=False)"
+    "df.to_csv('logs/keras_tuner_results.csv', index=False)"
    ]
   }
  ],
