--- a/insurance_fraud_cnn.ipynb
+++ b/insurance_fraud_cnn.ipynb
@@ -20,10 +20,8 @@
     "\n",
     "from sklearn.utils import class_weight\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
     "from sklearn.metrics import f1_score as f1_score_sk\n",
     "import scikitplot as skplt\n",
     "\n",
